fix: Fix overflowing user list in message modal - add height and overflow to opponent-list

--- a/osp/static/css/base.css
+++ b/osp/static/css/base.css
@@ -171,6 +171,8 @@ div> ::-webkit-scrollbar-thumb:hover {
 #opponent-list {
   padding-inline-start: 0;
   list-style-type: none;
+  height: 100%;
+  overflow: scroll;
 }
 
 .opponent-item {
